manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simplewebhook
spec:
  selector:
    app: simplewebhook
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
